App mobile bien avancée (toutes les fonctionnalités)

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -168,6 +168,9 @@
 
     <string-array name="formul">
         <item>Formule 1 mois: 19.90€</item>
+        <item>Formule 3 mois</item>
+        <item>Formule 6 mois</item>
+        <item>Formule 12 mois</item>
     </string-array>
 
 </resources>
